Added config.codekit to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ wp-content/themes/twentythirteen
 wp-content/themes/twentyfourteen
 wp-content/themes/francishadid
 .htaccess
+wp-content/themes/essay/config.codekit
